# llm.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: nn.hpp
src/: nn.cpp  train_gpt2.cpp
tests/: CMakeLists.txt  nn_test.cpp
